--- a/Proyecto curso fundamentos HTML/index.html
+++ b/Proyecto curso fundamentos HTML/index.html
@@ -6,17 +6,37 @@
     <title>Inicio</title>
   </head>
   <body>
-    <svg width="200px" height"300px" viewBox="0 0 200 300">
-      <image xlink:href="images/logo.svg" width="200px" height="300px"></image>
-    </svg>
-    <h1 id="titulo">Resumen Curricular</h1>
-    <h2>Nombre</h2> <h3>Stephen Vizcaíno</h3>
-    <h2>Fecha de Nacimiento</h2> <h3>26/Diciembre/1989</h3>
-    <h2>Lugar de Nacimiento</h2> <h3>Colombia</h3>
+    <header>
+      <svg width="200px" height"300px" viewBox="0 0 200 300">
+        <image xlink:href="images/logo.svg" width="200px" height="300px"></image>
+      </svg>
+      <h1>Resumen Curricular</h1>
+      <h2>Nombre</h2> <h3>Stephen Vizcaíno</h3>
+      <h2>Fecha de Nacimiento</h2> <h3>26/Diciembre/1989</h3>
+      <h2>Lugar de Nacimiento</h2> <h3>Colombia</h3>
+    </header>
     <nav>
        <a href="index.html">Inicio</a>
        <a href="educacion.html">Educación</a>
        <a href="experiencia.html">Experiencia</a>
     </nav>
+    <section id="Información Personal">
+      <h2>Información Personal</h2>
+      <p>Mi Nombre es Stephen Vizcaíno, tengo 28 años.<br>Nací en Colombia,
+      en la ciudad de Barranquilla. Fuí criado en Panamá desde año y medio
+      </p>
+      <h3>Idiomas</h3>
+      <ul id="Idiomas">
+        <li>Español - Lengua nativa</li>
+        <li>Inglés - Hablado/Escrito (avanzado)</li>
+      </ul>
+    </section>
   </body>
+  <footer>
+    <h3>Contacto</h3>
+    <ul id="Informacion de contacto">
+      <li>Email: <a href="mailto:svizcaino26@gmail.com">svizcaino26@gmail.com</a></li>
+      <li>Telefono: (507) 6561-5696</li>
+    </ul>
+  </footer>
 </html>
