--- a/Proyecto curso fundamentos HTML/index.html
+++ b/Proyecto curso fundamentos HTML/index.html
@@ -34,7 +34,7 @@
   </body>
   <footer>
     <h3>Contacto</h3>
-    <ul id="Informacion de contacto">
+    <ul id="contactInfo">
       <li>Email: <a href="mailto:svizcaino26@gmail.com">svizcaino26@gmail.com</a></li>
       <li>Telefono: (507) 6561-5696</li>
     </ul>
