--- a/Proyecto curso fundamentos HTML/experiencia.html
+++ b/Proyecto curso fundamentos HTML/experiencia.html
@@ -6,10 +6,37 @@
     <title>Experiencia</title>
   </head>
   <body>
+    <header>
+      <svg width="100px" height"200px" viewBox="0 0 100 200">
+        <image xlink:href="images/logo.svg" width="100px" height="200px"></image>
+      </svg>
+      <h1>Resumen Curricular</h1>
+      <h2>Nombre</h2> <h3>Stephen Vizcaíno</h3>
+      <h2>Fecha de Nacimiento</h2> <h3>26/Diciembre/1989</h3>
+      <h2>Lugar de Nacimiento</h2> <h3>Colombia</h3>
+    </header>
     <nav>
        <a href="index.html">Inicio</a>
        <a href="educacion.html">Educación</a>
        <a href="experiencia.html">Experiencia</a>
     </nav>
+    <h2>Experiencia</h2>
+    <h3>Habiliades e intereses profesionales </h3>
+    <video controls width="240" height="480">
+      <source src="video/habilidades.mp4" type="video/mp4" autoplay poster="posterimage.jpg">
+      Video no soportado
+    </video>
+    <h3>Hobbies y actividades recreacionales</h3>
+    <audio controls>
+      <source src="audio/hobbies.wav" type="audio/wav">
+        Audio no soportado
+    </audio>
   </body>
+  <footer>
+    <h3>Contacto</h3>
+    <ul id="contactInfo">
+      <li>Email: <a href="mailto:svizcaino26@gmail.com">svizcaino26@gmail.com</a></li>
+      <li>Telefono: (507) 6561-5696</li>
+    </ul>
+  </footer>
 </html>
